llvm/test/fail/19badres.dna
def main

   def f: a as int
     return: a

   f: 5
   writeString: "\nThis program is wrong!\n"
